--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Daniella</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
-   <link rel='stylesheet' href='style.css">
+   <link rel='stylesheet' href='style.css'>
 
 </head>
 <body>
